--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,26 +1,39 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
-
-        # IMPORTANT: You MUST configure your server version,
-        # either here or in the DATABASE_URL env var (see .env file)
-        #server_version: '13'
-
-        # only needed for MySQL
-        charset: utf8mb4
-        default_table_options:
-            collate: utf8mb4_unicode_ci
-
-        # backtrace queries in profiler (increases memory usage per request)
-        #profiling_collect_backtrace: '%kernel.debug%'
+        default_connection: default
+        connections:
+            default:
+                url: '%env(resolve:DATABASE_URL)%'
+                charset: utf8mb4
+                default_table_options:
+                    collate: utf8mb4_general_ci
+            movies:
+                url: '%env(resolve:DATABASE_MOVIES_URL)%'
+                charset: utf8mb4
+                default_table_options:
+                    collate: utf8mb4_general_ci
     orm:
         auto_generate_proxy_classes: true
-        naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
-        auto_mapping: true
-        mappings:
-            App:
-                is_bundle: false
-                type: annotation
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+        default_entity_manager: default
+        entity_managers:
+            default:
+                connection: default
+                mappings:
+                    App:
+                        is_bundle: false
+                        type: annotation
+                        dir: '%kernel.project_dir%/src/Entity'
+                        prefix: 'App\Entity'
+                        alias: App
+                naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
+                auto_mapping: true
+            movies:
+                connection: movies
+                mappings:
+                    AppMovies:
+                        is_bundle: false
+                        type: annotation
+                        dir: '%kernel.project_dir%/src/Movies/Entity'
+                        prefix: 'App\Movies\Entity'
+                        alias: AppMovies
+                naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
